# worky-regression

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  conftest.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260604_1555-d158a575cc0e_init_qa_dashboard.py  20260604_1630-270c3415262b_add_qa_cases_seq_auto_increment.py  20260604_1716-a612914a6fcd_add_qa_accounts_pool.py  20260604_1816-00048e91cda0_qa_cases_parent_id_for_sub_cases.py  20260608_1119-88ca454eb9e0_qa_runs_actors_qa_accounts_last_used_at.py  20260608_1129-9ba25f019c6f_add_qa_settings_for_backend_admin_creds.py  20260609_1141-f23e8c85aa71_add_qa_markups.py  20260609_1430-5829cd767b9d_add_qa_accounts_token_cache.py  20260609_1458-3d90dca8bffb_add_qa_markups_replies.py  20260609_1530-06c5835c0c2e_add_qa_markups_resolved.py  20260609_1700-b7f3a2c1d4e5_add_qa_accounts_db_name.py  20260610_1055-f6b142f5a88f_qa_accounts_add_display_name_gender.py  (+4 more)
cases/: device-labor-apply-job.yaml  device-labor-home-smoke.yaml  job-accept-1-of-2.yaml  job-accept-two-labor.yaml  job-apply-rejected-after-deadline.yaml  job-early-leave.yaml  job-full-flow-clock-in-out.yaml  job-full-flow-with-clock.yaml  job-happy-core.yaml  job-publish-in-1h.yaml  job-publish.yaml  job-two-labor-apply.yaml  path-contract-happy-green.yaml  path-happy-publisher-pass.yaml  path-t1-publish-task.yaml
cases/_fixtures/: test_accounts.yaml
scripts/: account_pool_worker.py  bootstrap_job_env.py  device_worker.py  markup_worker.py  resume_worker.py  revive_failed_run.py
tests/: test_jobs.py  test_paths.py  test_smoke.py
(+62 files in other folders)
